# rdxl_static

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: dots.rs  fns.rs  urls.rs  wtr.rs  www.rs
