[package]
name = "rdxl_static"
version = "0.0.3"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Static Site Generation Utilities for RDXL"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl_rss"
keywords = ["static","website","generation"]

[dependencies]
rdxl = "0.5"
rdxl_static_macros = "0.0.1"
