[package]
name = "rdxl_static"
version = "0.0.37"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Static Site Generation Utilities for RDXL"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/rdxl_static"
keywords = ["static","website","generation"]

[dependencies]
ctor = "0.1"
rdxl = "0.5"
rdxl_static_macros = "0.0.12"

[dependencies.syn]
version = "1.0"
features = ["full"]
